# agri

./: .env.example  .gitignore  agri.db  orchestrator_fail.txt  pyproject.toml  requirements.txt  seed_db.py  smoke_test.py  state.py  test_out.txt  test_out_payload.txt
FRONTEND-WEB/: .env.development  README.md  index.html  package.json
api/: __init__.py  auth.py  dependencies.py  historical_db_routes.py  main.py  schemas.py
chatbot/: README.md  context_builder.py  gemini_client.py  intent_detector.py  memory_manager.py  models.py  repository.py  router.py  schemas.py  voice_handler.py
configs/: app_config.yaml  data_config.yaml  db_config.yaml  farmer_input_config.yaml  lstm_config.yaml  lstm_model.pt  model_config.yaml  pest_faiss.index  pest_knowledge.json  prophet_config.yaml  prophet_irrigation.pkl  prophet_yield.pkl
docker/: docker-compose.yml
frontend/: tailwind.config.js
generative/: __init__.py  llm_client.py  multilingual.py  prompt_templates.py  recommendation_engine.py
historical_db/: __init__.py  db_connector.py  models.py  schema.sql  seed_data.py
ingestion/: __init__.py  change_detection.py  farmer_input_ingestion.py  mandi_price_ingestion.py  satellite_ingestor.py  spectral_indices.py
iot/: README.md  __init__.py  cache.py  feature_adapter.py  hardware_bridge.py  ingestor.py  models.py  router.py  schemas.py  simulator.py
models/: __init__.py  crop_suitability_scorer.py  ensemble_forecaster.py  lstm_forecaster.py  pest_retriever.py  price_forecaster.py  profit_boost_advisor.py  profit_calculator.py  prophet_forecaster.py  schemas.py  (+1 more)
(+142 files in other folders)
